# ink-lang

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
dispositions/: deep.ink  echo.ink  edge.ink  flow.ink  forge.ink  guard.ink  hunt.ink  spark.ink  weave.ink  weld.ink
examples/: kariem.ink  venom.ink
ink/: __init__.py  ast_nodes.py  cli.py  compiler.py  errors.py  parser.py  pressure.py  validator.py  visualizer.py
tests/: test_compiler.py  test_parser.py  test_pressure.py  test_validator.py  test_visualizer.py
