[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ink-lang"
version = "1.1.0"
description = "INK — The Intelligence Notation for Kinetics. A language for specifying how intelligence feels, not what it does."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Kariem"},
    {name = "Venom"},
]
keywords = ["ai", "llm", "prompting", "disposition", "phenomenology", "agent", "multi-agent"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "click>=8.0",
    "rich>=13.0",
]

[project.optional-dependencies]
viz = ["graphviz>=0.20"]
dev = ["pytest>=7.0", "pytest-cov>=4.0"]

[project.scripts]
ink = "ink.cli:main"

[tool.setuptools.packages.find]
include = ["ink*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
